[package]
name = "mere"
version = "0.2.3"
authors = ["Douglas Lau <doug.lau@state.mn.us>"]
description = "A real-time file mirroring tool"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/mnit-rtmc/mere"
repository = "https://github.com/mnit-rtmc/mere"
readme = "README.md"
edition = "2018"

[dependencies]
anyhow = "1.0"
gumdrop = "0.8"
log = "0.4"
whoami = "0.9"

[dependencies.inotify]
version = "0.8"
default_features = false

[dependencies.ssh2]
version = "0.8"
features = ["vendored-openssl"]

[dependencies.env_logger]
version = "0.7"
default_features = false
features = ["atty", "humantime"]
