[package]
name = "mere"
version = "0.3.11"
description = "A real-time file mirroring tool"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/mnit-rtmc/mere"
repository = "https://github.com/mnit-rtmc/mere"
readme = "README.md"
edition = "2024"

[dependencies]
anyhow = "1.0"
argh = "0.1"
log = "0.4"
whoami = "1"

[dependencies.inotify]
version = "0.11"
default-features = false

[dependencies.ssh2]
version = "0.9"
features = ["vendored-openssl"]

[dependencies.env_logger]
version = "0.11"
default-features = false
features = ["humantime"]
